$Id: History,v 1.41 2001-10-11 13:44:36 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 11, 2001 G.Cosmo (run-V03-02-05)
- Replaced inclusion of ctoken.h with G4Tokenizer.hh in
  G4UserPhysicsListMessenger.cc.
- Co-works with tag "globals-V03-02-03" where the STLInterface
  module has been removed.

Oct 10, 2001 M.Asai (run-V03-02-04)
- Add an option to store random number engine status for BOTH
  of each run and each event.

Oct 10, 2001 H.Kurashige
- Modify G4VUserPhysicsList::SetCutsForOthers to fix problems of
   no invocation of RetreivePhysicsTable() for muons  
   
Sep 19, 2001 H.Kurashige (run-V03-02-03)
- Modify G4VUserPhysicsList for STL migration of materials (Hisaya) 

Aug 02, 2001, G.Cosmo (run-V03-02-02)
- Add Set/GetApplyCuts methods in G4VUserPhysicsList (Hisaya)
- Add /run/particle/applyCuts command in G4UserPhysicsListMessenger (Hisaya)
- Updated revision number of G4RunManager.cc for reference tag.

Jul 18, 2001, M.Asai (run-V03-02-01)
- Add a new feature for the user to increase the number of waiting stacks
- Co-working with event-V03-02-02

Jul 15, 2001 
- Fixed bugs in G4VUserPhysicsList     (Hisaya)
--- Modify Store/RetreivePhysicsTable for new G4VProcess