@@ -1,4 +1,4 @@
-$Id: History,v 1.41 2001-10-11 13:44:36 gcosmo Exp $
+$Id: History,v 1.42 2001-10-20 02:01:18 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,7 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Oct 20, 2001 
+-  for  "CUT FOR MATERIAL"
+-   Modify Set/GetCuts related methods in G4VUserPhysicsList (Hisaya)
 
+- Modify G4VUserPhysicsList  
 Oct 11, 2001 G.Cosmo (run-V03-02-05)
 - Replaced inclusion of ctoken.h with G4Tokenizer.hh in
   G4UserPhysicsListMessenger.cc.
